--- a/CovidOutWebsite.html
+++ b/CovidOutWebsite.html
@@ -272,7 +272,7 @@
   <h6>how we see our plan in action</h6>
   <br>
   <div class="row slideanim">
-   <P>INSERT BLUEPRINT SKETCH THINGY</P>
+    <img src="blueprint.JPG" alt="Paris" width="500" height="450">
   </div>
 </div>
 
