--- a/CovidOutWebsite.html
+++ b/CovidOutWebsite.html
@@ -264,7 +264,7 @@
   <h6>our work in progress</h6>
   <br>
   <div class="row slideanim">
-   <p>INSERT DEMO VID</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3X6AYpQTKE4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <br><br>
 
